# build-cantera-via-cmake

./: CMakeLists.txt  README.md
ext/: CMakeLists.txt
src/: CMakeLists.txt  test.cc
